--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -7,59 +9,11 @@
   html, body{
     height: 100vh;
   }
+  
   body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     color: #000;
-  }
-  
-  .main{
-    display: flex;
-    height: 100vh;
-  }
-  
-  .container{
-    flex-grow: 1;
-    padding: 2em;
-    background-image: radial-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .8));
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-  }
-  .title{
-    font-size: 3em;
-  }
-  .info{
-    font-size: 1.1em;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    margin: 1.5em;
-    color: #000;
-  }
-  .btn{
-    margin: 0 auto;
-    border: none;
-    outline: none;
-    padding: .75em 1em;
-    font-size: 1em;
-    letter-spacing: 1px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
-    font-weight: bold;
-    text-transform: uppercase;
-    border-radius: 3px;
-    background-color: rgb(134, 49, 0);
-    color: #000;
-  }
-  
-  .sidebar{
-    width: 260px;
-    flex-shrink: 0;
-    background-color: "#ffff";
-    height: 100%;
-    overflow: auto;
   }
   
 
