--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html, body{
-    height: 100%;
-  }
-  
-  body{
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-  }
-  
-:root{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html, body {
+  height: 100%;
+  margin: 0; 
+  padding: 0;
+}
+
+body {
+  width: 100%;
+  font-size: 100%;
+  font-family: 'Inter', sans-serif;
+  vertical-align: baseline;
+}
+
+footer {
+  background-color: #5F0000;
+  color: white;
+  padding: 12px;
+  text-align: center;
+}
+
+:root {
   --color-primary: #5F0000;
   --color-grey-950: #F4F4F4;
   --color-grey-900: #E9E9E9;
@@ -30,15 +41,14 @@
   --color-grey-100: #181818;
   --color-fixed-black: #0D0D0D;
 
-  --font-size-0: 5rem; /* 80px */
-  --font-size-3: 1.125rem; /* 18px */
+  --font-size-0: 80px;
+  --font-size-3: 14px;
 
-  --font-weight-0: 700;
+  --font-weight-0: 500;
 
   --gap-login-form: 16px;
   --gap-aside-menu: 30px;
 
-  --width-btn: 100px;
-  --height-btn: 40px;
+  --width-btn: 80px;
+  --height-btn: 30px;
 }
-  
