--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,50 @@ body {
   vertical-align: baseline;
 }
 
+.carrinho-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  width: 400px; /* Largura padrão */
+  height: 100%;
+  padding: 26px;
+  background-color: rgba(55, 55, 55, 0.08);
+  }
+  
+  .carrinho-header {
+  margin-bottom: 12px;
+  font-size: 18px;
+  font-weight: 500;
+  }
+  
+  .item-carrinho {
+  margin-bottom: 16px;
+  color: #5F0000;
+  padding-bottom: 8px;
+  }
+  
+  .item-carrinho
+  {
+  border-bottom: none;
+  margin-bottom: 0;
+  }
+  
+  .resumo-carrinho {
+  margin-top: 24px;
+  }
+  
+  .endereco-entrega {
+  margin-top: 30px;
+  color: #5F0000;
+  }
+  
+  .finalizar-compra {
+  display: flex;
+  flex-direction: column;
+  margin: 30px 90px;
+  }
+
 footer {
   background-color: #5F0000;
   color: white;
